--- a/iac/cloudformation/01-template-syntax/code/ec2-multi-env.yaml
+++ b/iac/cloudformation/01-template-syntax/code/ec2-multi-env.yaml
@@ -1,24 +1,24 @@
 # =============================================================================
-# 多环境 EC2 模板 - Mini Project
+# Multi-Environment EC2 Template - Mini Project
 # =============================================================================
 #
-# 本模板演示 CloudFormation 的核心功能:
-#   - Parameters: 接受用户输入 (Environment, KeyPairName)
-#   - Mappings: 区域 AMI 映射 + 环境配置映射
-#   - Conditions: 条件创建 EIP (只在 prod 环境)
-#   - 内置函数: !Ref, !GetAtt, !Sub, !FindInMap, !If
-#   - Outputs: 导出资源信息
+# This template demonstrates CloudFormation core features:
+#   - Parameters: Accept user input (Environment, KeyPairName)
+#   - Mappings: Region AMI mapping + Environment config mapping
+#   - Conditions: Conditionally create EIP (only in prod)
+#   - Intrinsic functions: !Ref, !GetAtt, !Sub, !FindInMap, !If
+#   - Outputs: Export resource information
 #
-# 使用方法:
-#   1. 打开 CloudFormation Console
+# Usage:
+#   1. Open CloudFormation Console
 #   2. Create Stack > Upload a template file
-#   3. 填写 Parameters (选择 dev 或 prod)
-#   4. 观察 Resources 差异
+#   3. Fill in Parameters (choose dev or prod)
+#   4. Observe Resources differences
 #
-# 注意事项:
-#   - 需要先创建 EC2 Key Pair
-#   - 使用默认 VPC 和 Subnet
-#   - 完成后记得删除 Stack!
+# Notes:
+#   - Need to create EC2 Key Pair first
+#   - Uses default VPC and Subnet
+#   - Remember to delete Stack when done!
 #
 # =============================================================================
 
@@ -28,27 +28,27 @@ Description: |
   Creates t3.micro for dev, t3.small + EIP for prod.
 
 # -----------------------------------------------------------------------------
-# Metadata - Console UI 美化
+# Metadata - Console UI enhancement
 # -----------------------------------------------------------------------------
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: "環境設定"
+          default: "Environment Settings"
         Parameters:
           - Environment
       - Label:
-          default: "EC2 設定"
+          default: "EC2 Settings"
         Parameters:
           - KeyPairName
     ParameterLabels:
       Environment:
-        default: "環境を選択 (dev/prod)"
+        default: "Select Environment (dev/prod)"
       KeyPairName:
-        default: "SSH キーペア"
+        default: "SSH Key Pair"
 
 # -----------------------------------------------------------------------------
-# Parameters - 用户输入
+# Parameters - User input
 # -----------------------------------------------------------------------------
 Parameters:
   Environment:
@@ -58,33 +58,33 @@ Parameters:
       - dev
       - prod
     Description: |
-      環境種別を選択:
-      - dev: t3.micro, EIP なし, 8GB ディスク
-      - prod: t3.small, EIP あり, 20GB ディスク
-    ConstraintDescription: dev または prod を選択してください
+      Select environment type:
+      - dev: t3.micro, no EIP, 8GB disk
+      - prod: t3.small, with EIP, 20GB disk
+    ConstraintDescription: Please select either dev or prod
 
   KeyPairName:
     Type: AWS::EC2::KeyPair::KeyName
-    Description: SSH 接続用のキーペアを選択
+    Description: Select key pair for SSH connection
 
 # -----------------------------------------------------------------------------
-# Mappings - 静态查找表
+# Mappings - Static lookup tables
 # -----------------------------------------------------------------------------
 Mappings:
-  # 区域 AMI 映射
-  # 使用 Amazon Linux 2023 (2024-12 时点的 AMI ID)
-  # 注意: AMI ID 会随时间变化，生产环境建议使用 SSM Parameter
+  # Region AMI mapping
+  # Using Amazon Linux 2023 (AMI IDs as of 2024-12)
+  # Note: AMI IDs change over time, use SSM Parameter for production
   RegionAMI:
-    ap-northeast-1:    # 东京
+    ap-northeast-1:    # Tokyo
       AmazonLinux2023: ami-0d52744d6551d851e
-    ap-northeast-3:    # 大阪
+    ap-northeast-3:    # Osaka
       AmazonLinux2023: ami-0599b6e53ca798bb2
-    us-east-1:         # 弗吉尼亚
+    us-east-1:         # Virginia
       AmazonLinux2023: ami-0c02fb55956c7d316
-    us-west-2:         # 俄勒冈
+    us-west-2:         # Oregon
       AmazonLinux2023: ami-0b8c6b923777519db
 
-  # 环境配置映射
+  # Environment configuration mapping
   EnvironmentConfig:
     dev:
       InstanceType: t3.micro
@@ -96,31 +96,31 @@ Mappings:
       NameSuffix: production
 
 # -----------------------------------------------------------------------------
-# Conditions - 条件判断
+# Conditions - Conditional logic
 # -----------------------------------------------------------------------------
 Conditions:
-  # prod 环境创建 EIP
+  # Create EIP for prod environment
   IsProd: !Equals
     - !Ref Environment
     - prod
 
 # -----------------------------------------------------------------------------
-# Resources - 资源定义
+# Resources - Resource definitions
 # -----------------------------------------------------------------------------
 Resources:
-  # Security Group - 允许 SSH 访问
+  # Security Group - Allow SSH access
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: !Sub 'Security group for ${Environment} EC2 instance'
       SecurityGroupIngress:
-        # SSH 访问
+        # SSH access
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
           Description: SSH access from anywhere
-        # HTTP 访问 (可选)
+        # HTTP access (optional)
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
@@ -138,26 +138,26 @@ Resources:
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      # 使用 !FindInMap 从 Mappings 获取 AMI ID
+      # Use !FindInMap to get AMI ID from Mappings
       ImageId: !FindInMap
         - RegionAMI
         - !Ref 'AWS::Region'
         - AmazonLinux2023
 
-      # 使用 !FindInMap 根据环境获取 Instance Type
+      # Use !FindInMap to get Instance Type based on environment
       InstanceType: !FindInMap
         - EnvironmentConfig
         - !Ref Environment
         - InstanceType
 
-      # 引用 Parameter
+      # Reference Parameter
       KeyName: !Ref KeyPairName
 
-      # 引用 Security Group (使用 !Ref)
+      # Reference Security Group (using !Ref)
       SecurityGroupIds:
         - !Ref InstanceSecurityGroup
 
-      # 根盘配置
+      # Root volume configuration
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
@@ -169,16 +169,16 @@ Resources:
             DeleteOnTermination: true
             Encrypted: true
 
-      # Tags - 展示 !Sub 和 !Ref 的使用
+      # Tags - Demonstrating !Sub and !Ref usage
       Tags:
         - Key: Name
-          # !Sub 替换变量
+          # !Sub substitutes variables
           Value: !Sub '${Environment}-web-server'
         - Key: Environment
           Value: !Ref Environment
         - Key: ManagedBy
           Value: CloudFormation
-        # 使用 Pseudo Parameters
+        # Using Pseudo Parameters
         - Key: StackName
           Value: !Ref AWS::StackName
         - Key: AccountId
@@ -186,10 +186,10 @@ Resources:
         - Key: Region
           Value: !Ref AWS::Region
 
-  # Elastic IP - 只在 prod 环境创建
+  # Elastic IP - Only created in prod environment
   ElasticIP:
     Type: AWS::EC2::EIP
-    Condition: IsProd    # 条件创建！
+    Condition: IsProd    # Conditional creation!
     Properties:
       InstanceId: !Ref EC2Instance
       Tags:
@@ -199,43 +199,43 @@ Resources:
           Value: !Ref Environment
 
 # -----------------------------------------------------------------------------
-# Outputs - 输出信息
+# Outputs - Output information
 # -----------------------------------------------------------------------------
 Outputs:
-  # Instance ID - 使用 !Ref 获取主标识符
+  # Instance ID - Using !Ref to get primary identifier
   InstanceId:
     Description: EC2 Instance ID
     Value: !Ref EC2Instance
 
-  # Private IP - 使用 !GetAtt 获取属性
+  # Private IP - Using !GetAtt to get attribute
   PrivateIP:
     Description: Private IP Address
     Value: !GetAtt EC2Instance.PrivateIp
 
-  # Availability Zone - !GetAtt 获取其他属性
+  # Availability Zone - !GetAtt for other attributes
   AvailabilityZone:
     Description: Availability Zone
     Value: !GetAtt EC2Instance.AvailabilityZone
 
-  # Public IP - 使用 !If 条件输出
+  # Public IP - Using !If for conditional output
   PublicIP:
     Description: Public IP Address (EIP for prod, dynamic for dev)
     Value: !If
-      - IsProd                              # Condition 名称
-      - !Ref ElasticIP                      # true: 返回 EIP
-      - !GetAtt EC2Instance.PublicIp        # false: 返回动态 Public IP
+      - IsProd                              # Condition name
+      - !Ref ElasticIP                      # true: return EIP
+      - !GetAtt EC2Instance.PublicIp        # false: return dynamic Public IP
 
   # Security Group ID
   SecurityGroupId:
     Description: Security Group ID
     Value: !Ref InstanceSecurityGroup
 
-  # Instance ARN - 使用 !Sub 和 Pseudo Parameters 构建
+  # Instance ARN - Using !Sub with Pseudo Parameters
   InstanceArn:
     Description: EC2 Instance ARN
     Value: !Sub 'arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/${EC2Instance}'
 
-  # SSH 连接命令 - 方便用户复制
+  # SSH connection command - Convenient for users to copy
   SSHCommand:
     Description: SSH connection command
     Value: !If
@@ -243,7 +243,7 @@ Outputs:
       - !Sub 'ssh -i ${KeyPairName}.pem ec2-user@${ElasticIP}'
       - !Sub 'ssh -i ${KeyPairName}.pem ec2-user@${EC2Instance.PublicIp}'
 
-  # 环境配置摘要
+  # Environment configuration summary
   ConfigSummary:
     Description: Environment configuration summary
     Value: !Sub 'Environment: ${Environment}, Region: ${AWS::Region}'
