--- a/iac/cloudformation/01-template-syntax/code/template-anatomy.yaml
+++ b/iac/cloudformation/01-template-syntax/code/template-anatomy.yaml
@@ -1,59 +1,59 @@
 # =============================================================================
-# CloudFormation Template 完整结构示例
+# CloudFormation Template Complete Structure Example
 # =============================================================================
 #
-# 本文件展示 CloudFormation Template 的所有 Section，用于学习参考。
-# 实际项目中不需要使用所有 Section，只有 Resources 是必须的。
+# This file demonstrates all CloudFormation Template Sections for learning.
+# In actual projects, you don't need all Sections - only Resources is required.
 #
 # =============================================================================
 
 AWSTemplateFormatVersion: '2010-09-09'
 
 # -----------------------------------------------------------------------------
-# Description - 模板描述
+# Description - Template description
 # -----------------------------------------------------------------------------
-# 简要说明模板用途，会显示在 CloudFormation Console
+# Brief explanation of template purpose, displayed in CloudFormation Console
 Description: |
-  CloudFormation Template 完整结构示例
-  展示所有 Section：Parameters, Mappings, Conditions, Resources, Outputs, Metadata
+  CloudFormation Template Complete Structure Example
+  Demonstrates all Sections: Parameters, Mappings, Conditions, Resources, Outputs, Metadata
 
 # -----------------------------------------------------------------------------
-# Metadata - 元数据（可选）
+# Metadata - Optional metadata section
 # -----------------------------------------------------------------------------
-# 用于 Console UI 分组、提示等，不影响资源创建
+# Used for Console UI grouping, hints etc. Does not affect resource creation
 Metadata:
-  # AWS::CloudFormation::Interface 用于美化 Console 参数输入界面
+  # AWS::CloudFormation::Interface customizes Console parameter input UI
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: "基本設定"
+          default: "Basic Settings"
         Parameters:
           - Environment
           - ProjectName
       - Label:
-          default: "EC2 設定"
+          default: "EC2 Settings"
         Parameters:
           - InstanceType
           - KeyPairName
       - Label:
-          default: "ネットワーク設定"
+          default: "Network Settings"
         Parameters:
           - VpcId
           - SubnetId
     ParameterLabels:
       Environment:
-        default: "環境種別"
+        default: "Environment Type"
       ProjectName:
-        default: "プロジェクト名"
+        default: "Project Name"
       InstanceType:
-        default: "インスタンスタイプ"
+        default: "Instance Type"
 
 # -----------------------------------------------------------------------------
-# Parameters - 输入参数（可选）
+# Parameters - Input parameters (optional)
 # -----------------------------------------------------------------------------
-# 让用户在创建 Stack 时填写值，实现模板复用
+# Let users fill in values when creating Stack, enabling template reuse
 Parameters:
-  # 基本 String 类型
+  # Basic String type
   Environment:
     Type: String
     Default: dev
@@ -61,8 +61,8 @@ Parameters:
       - dev
       - stg
       - prod
-    Description: 環境種別（dev/stg/prod）
-    ConstraintDescription: dev, stg, prod のいずれかを選択してください
+    Description: Environment type (dev/stg/prod)
+    ConstraintDescription: Please select dev, stg, or prod
 
   ProjectName:
     Type: String
@@ -70,10 +70,10 @@ Parameters:
     MinLength: 3
     MaxLength: 20
     AllowedPattern: ^[a-z][a-z0-9-]*$
-    Description: プロジェクト名（英小文字、数字、ハイフンのみ）
-    ConstraintDescription: 英小文字で始まり、英小文字・数字・ハイフンのみ使用可能
+    Description: Project name (lowercase letters, numbers, hyphens only)
+    ConstraintDescription: Must start with lowercase letter, only lowercase letters, numbers, hyphens allowed
 
-  # Number 类型
+  # Number type
   InstanceType:
     Type: String
     Default: t3.micro
@@ -81,33 +81,33 @@ Parameters:
       - t3.micro
       - t3.small
       - t3.medium
-    Description: EC2 インスタンスタイプ
+    Description: EC2 Instance Type
 
-  # AWS-specific 类型（Console 显示下拉菜单）
+  # AWS-specific types (Console shows dropdown menu)
   KeyPairName:
     Type: AWS::EC2::KeyPair::KeyName
-    Description: EC2 に使用するキーペア
+    Description: Key pair for EC2
 
   VpcId:
     Type: AWS::EC2::VPC::Id
-    Description: EC2 を配置する VPC
+    Description: VPC for EC2 placement
 
   SubnetId:
     Type: AWS::EC2::Subnet::Id
-    Description: EC2 を配置するサブネット
+    Description: Subnet for EC2 placement
 
-  # SSM Parameter 类型（从 SSM 读取值）
+  # SSM Parameter type (reads value from SSM)
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
-    Description: 使用する AMI ID（SSM パラメータから取得）
+    Description: AMI ID to use (from SSM Parameter)
 
 # -----------------------------------------------------------------------------
-# Mappings - 静态查找表（可选）
+# Mappings - Static lookup tables (optional)
 # -----------------------------------------------------------------------------
-# 用于存储不会改变的映射关系，如区域 AMI ID、环境配置等
+# Used to store unchanging mappings like region AMI IDs, environment configs
 Mappings:
-  # 区域 AMI 映射（备用方案，优先使用 SSM Parameter）
+  # Region AMI mapping (backup option, prefer SSM Parameter)
   RegionAMI:
     ap-northeast-1:
       AmazonLinux2023: ami-0d52744d6551d851e
@@ -119,7 +119,7 @@ Mappings:
       AmazonLinux2023: ami-0c02fb55956c7d316
       Ubuntu22: ami-0c7217cdde317cfec
 
-  # 环境配置映射
+  # Environment configuration mapping
   EnvironmentConfig:
     dev:
       InstanceType: t3.micro
@@ -135,33 +135,33 @@ Mappings:
       Monitoring: true
 
 # -----------------------------------------------------------------------------
-# Conditions - 条件逻辑（可选）
+# Conditions - Conditional logic (optional)
 # -----------------------------------------------------------------------------
-# 根据参数值决定是否创建某些资源或设置某些属性
+# Decide whether to create resources or set properties based on parameter values
 Conditions:
-  # 是否是生产环境
+  # Is production environment
   IsProd: !Equals [!Ref Environment, prod]
 
-  # 是否不是生产环境
+  # Is not production environment
   IsNotProd: !Not [!Equals [!Ref Environment, prod]]
 
-  # 是否是开发环境
+  # Is development environment
   IsDev: !Equals [!Ref Environment, dev]
 
-  # 是否需要创建 EIP（只在 prod 和 stg 创建）
+  # Whether to create EIP (only in prod and stg)
   CreateEIP: !Or
     - !Equals [!Ref Environment, prod]
     - !Equals [!Ref Environment, stg]
 
-  # 组合条件示例
+  # Combined condition example
   IsProdInTokyo: !And
     - !Equals [!Ref Environment, prod]
     - !Equals [!Ref 'AWS::Region', ap-northeast-1]
 
 # -----------------------------------------------------------------------------
-# Resources - 资源定义（必须！）
+# Resources - Resource definitions (REQUIRED!)
 # -----------------------------------------------------------------------------
-# 定义要创建的 AWS 资源
+# Define AWS resources to create
 Resources:
   # Security Group
   InstanceSecurityGroup:
@@ -193,17 +193,17 @@ Resources:
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      # 使用 SSM Parameter 获取最新 AMI
+      # Use SSM Parameter to get latest AMI
       ImageId: !Ref LatestAmiId
-      # 根据环境使用不同的 Instance Type
+      # Use different Instance Type based on environment
       InstanceType: !FindInMap [EnvironmentConfig, !Ref Environment, InstanceType]
       KeyName: !Ref KeyPairName
       SubnetId: !Ref SubnetId
       SecurityGroupIds:
         - !Ref InstanceSecurityGroup
-      # 条件启用详细监控（prod/stg 启用）
+      # Conditionally enable detailed monitoring (enabled in prod/stg)
       Monitoring: !FindInMap [EnvironmentConfig, !Ref Environment, Monitoring]
-      # 根盘配置
+      # Root volume configuration
       BlockDeviceMappings:
         - DeviceName: /dev/xvda
           Ebs:
@@ -219,13 +219,13 @@ Resources:
           Value: !Ref ProjectName
         - Key: ManagedBy
           Value: CloudFormation
-        # 使用 Pseudo Parameters
+        # Using Pseudo Parameters
         - Key: StackName
           Value: !Ref AWS::StackName
         - Key: Region
           Value: !Ref AWS::Region
 
-  # Elastic IP - 只在 prod/stg 环境创建
+  # Elastic IP - Only created in prod/stg environments
   ElasticIP:
     Type: AWS::EC2::EIP
     Condition: CreateEIP
@@ -238,9 +238,9 @@ Resources:
           Value: !Ref Environment
 
 # -----------------------------------------------------------------------------
-# Outputs - 输出值（可选）
+# Outputs - Output values (optional)
 # -----------------------------------------------------------------------------
-# 输出重要信息，可以被其他 Stack 引用
+# Output important info, can be referenced by other Stacks
 Outputs:
   # Instance ID
   InstanceId:
@@ -256,28 +256,28 @@ Outputs:
     Export:
       Name: !Sub '${AWS::StackName}-SecurityGroupId'
 
-  # Private IP（总是有的）
+  # Private IP (always available)
   PrivateIP:
     Description: EC2 Private IP Address
     Value: !GetAtt EC2Instance.PrivateIp
 
-  # Public IP（条件输出）
+  # Public IP (conditional output)
   PublicIP:
     Description: Public IP Address
     Value: !If
       - CreateEIP
-      - !Ref ElasticIP                    # 有 EIP 时返回 EIP
-      - !GetAtt EC2Instance.PublicIp      # 没有 EIP 时返回动态 IP
+      - !Ref ElasticIP                    # Return EIP when available
+      - !GetAtt EC2Instance.PublicIp      # Return dynamic IP when no EIP
     Condition: CreateEIP
     Export:
       Name: !Sub '${AWS::StackName}-PublicIP'
 
-  # Instance ARN（使用 !Sub 和 Pseudo Parameters 构建）
+  # Instance ARN (built using !Sub and Pseudo Parameters)
   InstanceArn:
     Description: EC2 Instance ARN
     Value: !Sub 'arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/${EC2Instance}'
 
-  # SSH 连接命令（方便复制）
+  # SSH connection command (convenient to copy)
   SSHCommand:
     Description: SSH connection command
     Value: !If
@@ -285,7 +285,7 @@ Outputs:
       - !Sub 'ssh -i ${KeyPairName}.pem ec2-user@${ElasticIP}'
       - !Sub 'ssh -i ${KeyPairName}.pem ec2-user@${EC2Instance.PublicIp}'
 
-  # 环境信息
+  # Environment info
   EnvironmentInfo:
     Description: Environment configuration summary
     Value: !Sub |
