--- a/iac/cloudformation/06-enterprise-japan/code/monitoring-alarms.yaml
+++ b/iac/cloudformation/06-enterprise-japan/code/monitoring-alarms.yaml
@@ -1,30 +1,30 @@
 # =============================================================================
 # monitoring-alarms.yaml
-# 企业级监控告警基础设施 - CloudWatch Alarms + SNS
+# Enterprise Monitoring Alarms Infrastructure - CloudWatch Alarms + SNS
 # =============================================================================
 #
-# 本模板部署企业级监控告警系统，包括：
-# - SNS Topic: 告警通知渠道
-# - CloudWatch Alarms: 各种监控告警
-# - 日语告警描述（日本企业运维场景）
+# This template deploys enterprise-grade monitoring alarm system, including:
+# - SNS Topic: Alert notification channel
+# - CloudWatch Alarms: Various monitoring alarms
+# - Japanese alarm descriptions (Japan enterprise operations scenarios)
 #
-# 使用场景：
-# - 運用監視（うんようかんし）- 日常运维监控
-# - 異常検知（いじょうけんち）- 异常检测
-# - 障害対応（しょうがいたいおう）- 故障响应
+# Use cases:
+# - Operations monitoring (unyou kanshi) - Daily operations monitoring
+# - Anomaly detection (ijou kenchi) - Anomaly detection
+# - Incident response (shougai taiou) - Incident response
 #
-# 使用方法：
-#   1. AWS Console → CloudFormation → Create stack
-#   2. 上传此文件
+# Usage:
+#   1. AWS Console -> CloudFormation -> Create stack
+#   2. Upload this file
 #   3. Stack name: enterprise-monitoring
-#   4. 输入通知邮箱
-#   5. 等待 CREATE_COMPLETE
-#   6. 确认 SNS 邮箱订阅
+#   4. Enter notification email
+#   5. Wait for CREATE_COMPLETE
+#   6. Confirm SNS email subscription
 #
-# 费用估算：
-# - SNS: $0.50/百万请求
-# - CloudWatch Alarms: $0.10/alarm/月
-# - 总计约 $1-2/月
+# Cost estimate:
+# - SNS: $0.50/million requests
+# - CloudWatch Alarms: $0.10/alarm/month
+# - Total approx $1-2/month
 #
 # =============================================================================
 
@@ -32,61 +32,61 @@ AWSTemplateFormatVersion: '2010-09-09'
 
 Description: |
   Enterprise Monitoring Alarms - CloudWatch + SNS
-  企業級監視アラーム基盤 - 運用監視・異常検知用
-  CloudFormation 課程 Lesson 06 示例
+  Enterprise monitoring alarm infrastructure for operations monitoring
+  CloudFormation Course Lesson 06 Example
 
 # -----------------------------------------------------------------------------
-# Metadata - 控制台参数分组
+# Metadata - Console parameter grouping
 # -----------------------------------------------------------------------------
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: "通知设置 (通知設定)"
+          default: "Notification Settings"
         Parameters:
           - NotificationEmail
       - Label:
-          default: "EC2 监控阈值 (EC2 監視閾値)"
+          default: "EC2 Monitoring Thresholds"
         Parameters:
           - CPUThreshold
           - MemoryThreshold
           - DiskThreshold
       - Label:
-          default: "RDS 监控阈值 (RDS 監視閾値)"
+          default: "RDS Monitoring Thresholds"
         Parameters:
           - RDSCPUThreshold
           - RDSStorageThreshold
           - RDSConnectionsThreshold
       - Label:
-          default: "可选配置 (オプション)"
+          default: "Optional Configuration"
         Parameters:
           - CreateEC2Alarms
           - CreateRDSAlarms
           - CreateBillingAlarm
 
 # -----------------------------------------------------------------------------
-# Parameters - 输入参数
+# Parameters - Input parameters
 # -----------------------------------------------------------------------------
 Parameters:
 
-  # 通知设置
+  # Notification settings
   NotificationEmail:
     Type: String
     Description: |
-      告警通知邮箱（アラート通知先メールアドレス）
-      运维团队共享邮箱推荐：ops-team@example.com
+      Alert notification email address
+      Recommended: ops-team shared mailbox like ops-team@example.com
     AllowedPattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$'
-    ConstraintDescription: "请输入有效的邮箱地址"
+    ConstraintDescription: "Please enter a valid email address"
 
-  # EC2 监控阈值
+  # EC2 monitoring thresholds
   CPUThreshold:
     Type: Number
     Default: 80
     MinValue: 50
     MaxValue: 100
     Description: |
-      CPU 使用率告警阈值 % (CPU 使用率アラーム閾値)
-      推荐值：80%（日本企业通常设置 70-85%）
+      CPU utilization alarm threshold %
+      Recommended: 80% (Japanese enterprises typically set 70-85%)
 
   MemoryThreshold:
     Type: Number
@@ -94,8 +94,8 @@ Parameters:
     MinValue: 50
     MaxValue: 100
     Description: |
-      内存使用率告警阈值 % (メモリ使用率アラーム閾値)
-      注意：需要 CloudWatch Agent 采集内存指标
+      Memory utilization alarm threshold %
+      Note: Requires CloudWatch Agent to collect memory metrics
 
   DiskThreshold:
     Type: Number
@@ -103,37 +103,37 @@ Parameters:
     MinValue: 50
     MaxValue: 100
     Description: |
-      磁盘使用率告警阈值 % (ディスク使用率アラーム閾値)
-      注意：需要 CloudWatch Agent 采集磁盘指标
+      Disk utilization alarm threshold %
+      Note: Requires CloudWatch Agent to collect disk metrics
 
-  # RDS 监控阈值
+  # RDS monitoring thresholds
   RDSCPUThreshold:
     Type: Number
     Default: 80
     MinValue: 50
     MaxValue: 100
-    Description: "RDS CPU 使用率告警阈值 %"
+    Description: "RDS CPU utilization alarm threshold %"
 
   RDSStorageThreshold:
     Type: Number
     Default: 10737418240  # 10GB in bytes
     Description: |
-      RDS 剩余存储空间告警阈值（字节）
-      默认 10GB，低于此值告警
+      RDS free storage space alarm threshold (bytes)
+      Default 10GB, alert when below this value
 
   RDSConnectionsThreshold:
     Type: Number
     Default: 100
-    Description: "RDS 数据库连接数告警阈值"
+    Description: "RDS database connections alarm threshold"
 
-  # 可选配置
+  # Optional configuration
   CreateEC2Alarms:
     Type: String
     Default: "true"
     AllowedValues:
       - "true"
       - "false"
-    Description: "是否创建 EC2 相关告警"
+    Description: "Whether to create EC2 related alarms"
 
   CreateRDSAlarms:
     Type: String
@@ -141,7 +141,7 @@ Parameters:
     AllowedValues:
       - "true"
       - "false"
-    Description: "是否创建 RDS 相关告警（需要有 RDS 实例）"
+    Description: "Whether to create RDS related alarms (requires existing RDS instance)"
 
   CreateBillingAlarm:
     Type: String
@@ -150,11 +150,11 @@ Parameters:
       - "true"
       - "false"
     Description: |
-      是否创建费用告警 (課金アラームを作成するか)
-      注意：只在 us-east-1 有效
+      Whether to create billing alarm
+      Note: Only works in us-east-1
 
 # -----------------------------------------------------------------------------
-# Conditions - 条件逻辑
+# Conditions - Conditional logic
 # -----------------------------------------------------------------------------
 Conditions:
 
@@ -175,12 +175,12 @@ Conditions:
       - us-east-1
 
 # -----------------------------------------------------------------------------
-# Resources - 资源定义
+# Resources - Resource definitions
 # -----------------------------------------------------------------------------
 Resources:
 
   # ===========================================================================
-  # SNS Topic - 告警通知渠道
+  # SNS Topic - Alert notification channel
   # ===========================================================================
 
   AlertTopic:
@@ -196,10 +196,10 @@ Resources:
         - Key: ManagedBy
           Value: CloudFormation
         - Key: Purpose
-          Value: "運用監視アラート (Operations Monitoring Alerts)"
+          Value: "Operations Monitoring Alerts"
 
   # ---------------------------------------------------------------------------
-  # Email 订阅
+  # Email subscription
   # ---------------------------------------------------------------------------
   EmailSubscription:
     Type: AWS::SNS::Subscription
@@ -209,7 +209,7 @@ Resources:
       Endpoint: !Ref NotificationEmail
 
   # ---------------------------------------------------------------------------
-  # SNS Topic Policy（允许 CloudWatch 发送通知）
+  # SNS Topic Policy (allow CloudWatch to send notifications)
   # ---------------------------------------------------------------------------
   AlertTopicPolicy:
     Type: AWS::SNS::TopicPolicy
@@ -227,11 +227,11 @@ Resources:
             Resource: !Ref AlertTopic
 
   # ===========================================================================
-  # EC2 Alarms - EC2 监控告警
+  # EC2 Alarms - EC2 monitoring alarms
   # ===========================================================================
 
   # ---------------------------------------------------------------------------
-  # High CPU Alarm (高 CPU 使用率)
+  # High CPU Alarm
   # ---------------------------------------------------------------------------
   HighCPUAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -239,46 +239,45 @@ Resources:
     Properties:
       AlarmName: !Sub '${AWS::StackName}-ec2-high-cpu'
       AlarmDescription: |
-        【警告】EC2 CPU 使用率が閾値を超過しました
-        CPU utilization exceeded threshold
+        [WARNING] EC2 CPU utilization exceeded threshold
 
-        対応手順:
-        1. CloudWatch メトリクスで詳細確認
-        2. EC2 インスタンスの状態確認
-        3. 必要に応じてスケールアップ/アウト検討
+        Response procedure:
+        1. Check CloudWatch metrics for details
+        2. Check EC2 instance status
+        3. Consider scale-up/scale-out if necessary
 
-        担当: 運用チーム
-      # 指标配置
+        Owner: Operations Team
+      # Metric configuration
       Namespace: AWS/EC2
       MetricName: CPUUtilization
       Statistic: Average
-      Period: 300  # 5 分钟
-      EvaluationPeriods: 2  # 连续 2 个周期
+      Period: 300  # 5 minutes
+      EvaluationPeriods: 2  # 2 consecutive periods
       Threshold: !Ref CPUThreshold
       ComparisonOperator: GreaterThanThreshold
       TreatMissingData: notBreaching
-      # 告警动作
+      # Alarm actions
       AlarmActions:
         - !Ref AlertTopic
       OKActions:
         - !Ref AlertTopic
       # ---------------------------------------------------------------------------
-      # Dimensions 说明：
+      # Dimensions note:
       # ---------------------------------------------------------------------------
-      # Dimensions: [] 表示监控所有 EC2 实例的聚合指标
+      # Dimensions: [] monitors aggregate metrics for all EC2 instances
       #
-      # 如需监控特定实例，请添加：
+      # To monitor a specific instance, add:
       #   Dimensions:
       #     - Name: InstanceId
       #       Value: i-0123456789abcdef0
       #
-      # 注意：空 Dimensions 在没有任何 EC2 实例时会显示 INSUFFICIENT_DATA
-      # 这是正常现象，有实例运行后会自动变为 OK 或 ALARM
+      # Note: Empty Dimensions will show INSUFFICIENT_DATA when no EC2 instances exist
+      # This is normal, it will automatically change to OK or ALARM when instances run
       # ---------------------------------------------------------------------------
       Dimensions: []
 
   # ---------------------------------------------------------------------------
-  # Status Check Failed Alarm (状态检查失败)
+  # Status Check Failed Alarm
   # ---------------------------------------------------------------------------
   StatusCheckFailedAlarm:
     Type: AWS::CloudWatch::Alarm
@@ -286,20 +285,19 @@ Resources:
     Properties:
       AlarmName: !Sub '${AWS::StackName}-ec2-status-check-failed'
       AlarmDescription: |
-        【緊急】EC2 ステータスチェック失敗
-        EC2 Status Check Failed - Immediate attention required
+        [URGENT] EC2 Status Check Failed - Immediate attention required
 
-        対応手順:
-        1. EC2 コンソールでインスタンス状態確認
-        2. システムステータス/インスタンスステータス確認
-        3. 必要に応じてインスタンス再起動
-        4. ハードウェア障害の場合は AWS サポートに連絡
+        Response procedure:
+        1. Check instance status in EC2 Console
+        2. Check system status/instance status
+        3. Reboot instance if necessary
+        4. Contact AWS support if hardware failure
 
-        エスカレーション: 15分以内に対応なければ上長報告
+        Escalation: Report to supervisor if not resolved within 15 minutes
       Namespace: AWS/EC2
       MetricName: StatusCheckFailed
       Statistic: Maximum
-      Period: 60  # 1 分钟（紧急）
+      Period: 60  # 1 minute (urgent)
       EvaluationPeriods: 2
       Threshold: 1
       ComparisonOperator: GreaterThanOrEqualToThreshold
@@ -308,7 +306,7 @@ Resources:
         - !Ref AlertTopic
 
   # ===========================================================================
-  # RDS Alarms - RDS 监控告警
+  # RDS Alarms - RDS monitoring alarms
   # ===========================================================================
 
   # ---------------------------------------------------------------------------
@@ -320,13 +318,12 @@ Resources:
     Properties:
       AlarmName: !Sub '${AWS::StackName}-rds-high-cpu'
       AlarmDescription: |
-        【警告】RDS CPU 使用率が閾値を超過しました
-        RDS CPU utilization exceeded threshold
+        [WARNING] RDS CPU utilization exceeded threshold
 
-        対応手順:
-        1. Performance Insights で SQL 負荷確認
-        2. スロークエリログ確認
-        3. 必要に応じてインスタンスタイプ変更検討
+        Response procedure:
+        1. Check SQL load in Performance Insights
+        2. Check slow query logs
+        3. Consider instance type change if necessary
       Namespace: AWS/RDS
       MetricName: CPUUtilization
       Statistic: Average
@@ -348,15 +345,14 @@ Resources:
     Properties:
       AlarmName: !Sub '${AWS::StackName}-rds-low-storage'
       AlarmDescription: |
-        【警告】RDS ストレージ残量が少なくなっています
-        RDS Free Storage Space is low
+        [WARNING] RDS Free Storage Space is low
 
-        対応手順:
-        1. 不要データの削除検討
-        2. ストレージ容量の拡張計画策定
-        3. 自動拡張設定の確認
+        Response procedure:
+        1. Consider deleting unnecessary data
+        2. Plan storage capacity expansion
+        3. Check auto-scaling settings
 
-        緊急度: 24時間以内に対応必要
+        Urgency: Action required within 24 hours
       Namespace: AWS/RDS
       MetricName: FreeStorageSpace
       Statistic: Average
@@ -378,13 +374,12 @@ Resources:
     Properties:
       AlarmName: !Sub '${AWS::StackName}-rds-high-connections'
       AlarmDescription: |
-        【警告】RDS 接続数が閾値に近づいています
-        RDS Database connections approaching limit
+        [WARNING] RDS Database connections approaching limit
 
-        対応手順:
-        1. アプリケーションの接続プール設定確認
-        2. 不要な接続の特定と切断
-        3. max_connections パラメータ確認
+        Response procedure:
+        1. Check application connection pool settings
+        2. Identify and terminate unnecessary connections
+        3. Check max_connections parameter
       Namespace: AWS/RDS
       MetricName: DatabaseConnections
       Statistic: Average
@@ -398,7 +393,7 @@ Resources:
       Dimensions: []
 
   # ===========================================================================
-  # Billing Alarm - 费用告警（仅 us-east-1）
+  # Billing Alarm - Cost alarm (us-east-1 only)
   # ===========================================================================
 
   BillingAlarm:
@@ -407,17 +402,16 @@ Resources:
     Properties:
       AlarmName: !Sub '${AWS::StackName}-billing-alert'
       AlarmDescription: |
-        【注意】AWS 請求額が閾値を超過しました
-        AWS Estimated Charges exceeded threshold
+        [NOTICE] AWS Estimated Charges exceeded threshold
 
-        対応:
-        1. Cost Explorer で費用内訳確認
-        2. 不要リソースの特定と削除
-        3. 予算超過の場合は上長報告
+        Response:
+        1. Check cost breakdown in Cost Explorer
+        2. Identify and delete unnecessary resources
+        3. Report to supervisor if over budget
       Namespace: AWS/Billing
       MetricName: EstimatedCharges
       Statistic: Maximum
-      Period: 21600  # 6 小时
+      Period: 21600  # 6 hours
       EvaluationPeriods: 1
       Threshold: 50  # $50
       ComparisonOperator: GreaterThanThreshold
@@ -429,7 +423,7 @@ Resources:
           Value: USD
 
   # ===========================================================================
-  # CloudWatch Dashboard - 监控仪表板
+  # CloudWatch Dashboard - Monitoring dashboard
   # ===========================================================================
 
   MonitoringDashboard:
@@ -446,7 +440,7 @@ Resources:
               "width": 24,
               "height": 1,
               "properties": {
-                "markdown": "# Enterprise Monitoring Dashboard (運用監視ダッシュボード)"
+                "markdown": "# Enterprise Monitoring Dashboard"
               }
             },
             {
@@ -498,7 +492,7 @@ Resources:
               "width": 24,
               "height": 3,
               "properties": {
-                "title": "Active Alarms (アクティブアラーム)",
+                "title": "Active Alarms",
                 "alarms": [
                   "arn:aws:cloudwatch:${AWS::Region}:${AWS::AccountId}:alarm:${AWS::StackName}-ec2-high-cpu",
                   "arn:aws:cloudwatch:${AWS::Region}:${AWS::AccountId}:alarm:${AWS::StackName}-ec2-status-check-failed"
@@ -509,50 +503,49 @@ Resources:
         }
 
 # -----------------------------------------------------------------------------
-# Outputs - 输出值
+# Outputs - Output values
 # -----------------------------------------------------------------------------
 Outputs:
 
   AlertTopicArn:
-    Description: "告警 SNS Topic ARN"
+    Description: "Alert SNS Topic ARN"
     Value: !Ref AlertTopic
     Export:
       Name: !Sub '${AWS::StackName}-alert-topic'
 
   AlertTopicName:
-    Description: "告警 SNS Topic 名称"
+    Description: "Alert SNS Topic name"
     Value: !GetAtt AlertTopic.TopicName
 
   DashboardURL:
-    Description: "监控仪表板 URL (Dashboard URL)"
+    Description: "Monitoring Dashboard URL"
     Value: !Sub 'https://${AWS::Region}.console.aws.amazon.com/cloudwatch/home?region=${AWS::Region}#dashboards:name=${AWS::StackName}-dashboard'
 
   AlarmsConsoleURL:
-    Description: "告警控制台 URL (Alarms Console URL)"
+    Description: "Alarms Console URL"
     Value: !Sub 'https://${AWS::Region}.console.aws.amazon.com/cloudwatch/home?region=${AWS::Region}#alarmsV2:?~(search~(alarmNamePrefix~(contains~(0~%27${AWS::StackName}))))'
 
   NotificationEmailAddress:
-    Description: "告警通知邮箱 (要确认订阅！)"
+    Description: "Alert notification email (please confirm subscription!)"
     Value: !Ref NotificationEmail
 
 # =============================================================================
-# 日本 IT 场景说明
+# Japan IT Scenario Notes
 # =============================================================================
 #
-# 運用監視（うんようかんし）:
-#   本模板提供日本企业标准的监控告警配置
-#   - 告警描述使用日语，方便运维团队理解
-#   - 包含对应手順（操作步骤）
-#   - 明确エスカレーション（升级）规则
+# Operations Monitoring (unyou kanshi):
+#   This template provides standard monitoring alarm configuration for Japanese enterprises
+#   - Alarm descriptions include response procedures
+#   - Clear escalation rules
 #
-# 告警级别说明:
-#   【緊急】- 需要立即响应（15分钟内）
-#   【警告】- 需要当日处理
-#   【注意】- 需要关注，可安排处理
+# Alarm severity levels:
+#   [URGENT] - Requires immediate response (within 15 minutes)
+#   [WARNING] - Requires action same day
+#   [NOTICE] - Needs attention, can be scheduled
 #
-# 运维轮班（シフト）场景:
-#   - 告警邮件发送到共享邮箱
-#   - 当值人员负责响应
-#   - 按障害対応手順書处理
+# Shift operations scenario:
+#   - Alert emails sent to shared mailbox
+#   - On-duty personnel responsible for response
+#   - Follow incident response procedures
 #
 # =============================================================================
