--- a/iac/cloudformation/04-multi-stack/code/alb-stack.yaml
+++ b/iac/cloudformation/04-multi-stack/code/alb-stack.yaml
@@ -2,18 +2,18 @@
 # ALB Stack - ALB Security Group Layer
 # =============================================================================
 #
-# Step 8 练习的中间层 Stack
-# 从 Network Stack 导入 VPC 和 Subnet，导出 ALB Security Group ID
+# Middle layer Stack for Step 8 exercise
+# Imports VPC and Subnet from Network Stack, exports ALB Security Group ID
 #
-# 使用方法:
-#   1. 先部署 network-stack.yaml (dev-network-stack)
-#   2. 再部署此模板 (dev-alb-stack)
-#   3. 最后部署 app-stack.yaml (dev-app-stack)
+# Usage:
+#   1. First deploy network-stack.yaml (dev-network-stack)
+#   2. Then deploy this template (dev-alb-stack)
+#   3. Finally deploy app-stack.yaml (dev-app-stack)
 #
-# 清理顺序:
-#   1. 先删除 dev-app-stack
-#   2. 再删除 dev-alb-stack
-#   3. 最后删除 dev-network-stack
+# Cleanup order:
+#   1. First delete dev-app-stack
+#   2. Then delete dev-alb-stack
+#   3. Finally delete dev-network-stack
 #
 # =============================================================================
 
@@ -30,7 +30,7 @@ Parameters:
     Description: Environment name (must match network-stack)
 
 Resources:
-  # ALB Security Group - 允许 HTTP/HTTPS 入站
+  # ALB Security Group - Allow HTTP/HTTPS inbound
   ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -38,13 +38,13 @@ Resources:
       VpcId: !ImportValue
         Fn::Sub: '${Environment}-VpcId'
       SecurityGroupIngress:
-        # HTTP 入站
+        # HTTP inbound
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
           Description: HTTP from internet
-        # HTTPS 入站
+        # HTTPS inbound
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
