--- a/iac/cloudformation/06-enterprise-japan/code/audit-infra.yaml
+++ b/iac/cloudformation/06-enterprise-japan/code/audit-infra.yaml
@@ -1,29 +1,29 @@
 # =============================================================================
 # audit-infra.yaml
-# 企业级审计基础设施 - CloudTrail + Config
+# Enterprise Audit Infrastructure - CloudTrail + Config
 # =============================================================================
 #
-# 本模板部署企业级审计基础设施，包括：
-# - CloudTrail: 记录所有 AWS API 调用
-# - AWS Config: 持续合规性检查
-# - S3 Bucket: 存储审计日志
+# This template deploys enterprise-grade audit infrastructure, including:
+# - CloudTrail: Records all AWS API calls
+# - AWS Config: Continuous compliance checking
+# - S3 Bucket: Stores audit logs
 #
-# 使用场景：
-# - 監査対応（かんさたいおう）- 内部/外部审计
-# - 証跡管理（しょうせきかんり）- 审计日志保存
-# - コンプライアンス - 合规性检查
+# Use cases:
+# - Audit response (kansa taiou) - Internal/external audits
+# - Evidence management (shouseki kanri) - Audit log retention
+# - Compliance - Compliance checking
 #
-# 使用方法：
-#   1. AWS Console → CloudFormation → Create stack
-#   2. 上传此文件
+# Usage:
+#   1. AWS Console -> CloudFormation -> Create stack
+#   2. Upload this file
 #   3. Stack name: enterprise-audit
-#   4. 配置参数
-#   5. 等待 CREATE_COMPLETE
+#   4. Configure parameters
+#   5. Wait for CREATE_COMPLETE
 #
-# 费用估算：
-# - CloudTrail: 第一个 Trail 免费，S3 存储费用
-# - Config: 每条规则 $0.001/evaluation
-# - S3: 存储费用（约 $0.023/GB/月）
+# Cost estimate:
+# - CloudTrail: First Trail free, S3 storage costs
+# - Config: $0.001/evaluation per rule
+# - S3: Storage costs (approx $0.023/GB/month)
 #
 # =============================================================================
 
@@ -31,29 +31,29 @@ AWSTemplateFormatVersion: '2010-09-09'
 
 Description: |
   Enterprise Audit Infrastructure - CloudTrail + Config
-  企業級審計基盤 - 監査対応・証跡管理用
-  CloudFormation 課程 Lesson 06 示例
+  Enterprise audit platform for audit response and evidence management
+  CloudFormation Course Lesson 06 Example
 
 # -----------------------------------------------------------------------------
-# Metadata - 控制台参数分组
+# Metadata - Console parameter grouping
 # -----------------------------------------------------------------------------
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
-          default: "审计配置 (監査設定)"
+          default: "Audit Configuration"
         Parameters:
           - EnableCloudTrail
           - EnableConfig
           - RetentionDays
       - Label:
-          default: "可选配置 (オプション設定)"
+          default: "Optional Configuration"
         Parameters:
           - EnableLogFileValidation
           - EnableS3DataEvents
 
 # -----------------------------------------------------------------------------
-# Parameters - 输入参数
+# Parameters - Input parameters
 # -----------------------------------------------------------------------------
 Parameters:
 
@@ -64,7 +64,7 @@ Parameters:
       - "true"
       - "false"
     Description: |
-      是否启用 CloudTrail（CloudTrail を有効化するか）
+      Whether to enable CloudTrail
 
   EnableConfig:
     Type: String
@@ -73,7 +73,7 @@ Parameters:
       - "true"
       - "false"
     Description: |
-      是否启用 AWS Config（AWS Config を有効化するか）
+      Whether to enable AWS Config
 
   RetentionDays:
     Type: Number
@@ -85,10 +85,10 @@ Parameters:
       - 180
       - 365
     Description: |
-      日志保留天数（ログ保持期間）
-      - 30: 开发环境
-      - 90: 一般企业
-      - 365: 金融/合规要求
+      Log retention days
+      - 30: Development environment
+      - 90: General enterprise
+      - 365: Financial/compliance requirements
 
   EnableLogFileValidation:
     Type: String
@@ -97,8 +97,8 @@ Parameters:
       - "true"
       - "false"
     Description: |
-      是否启用日志文件验证（ログファイル検証を有効化）
-      防止日志被篡改
+      Whether to enable log file validation
+      Prevents log tampering
 
   EnableS3DataEvents:
     Type: String
@@ -107,67 +107,67 @@ Parameters:
       - "true"
       - "false"
     Description: |
-      是否记录 S3 数据事件（S3 データイベントを記録）
-      注意：会产生额外费用
+      Whether to record S3 data events
+      Note: Incurs additional costs
 
 # -----------------------------------------------------------------------------
-# Conditions - 条件逻辑
+# Conditions - Conditional logic
 # -----------------------------------------------------------------------------
 Conditions:
 
-  # 是否启用 CloudTrail
+  # Whether to enable CloudTrail
   CreateCloudTrail: !Equals
     - !Ref EnableCloudTrail
     - "true"
 
-  # 是否启用 Config
+  # Whether to enable Config
   CreateConfig: !Equals
     - !Ref EnableConfig
     - "true"
 
-  # 是否启用日志验证
+  # Whether to enable log validation
   EnableValidation: !Equals
     - !Ref EnableLogFileValidation
     - "true"
 
-  # 是否记录 S3 数据事件
+  # Whether to record S3 data events
   EnableDataEvents: !Equals
     - !Ref EnableS3DataEvents
     - "true"
 
 # -----------------------------------------------------------------------------
-# Resources - 资源定义
+# Resources - Resource definitions
 # -----------------------------------------------------------------------------
 Resources:
 
   # ===========================================================================
-  # S3 Bucket - 审计日志存储
+  # S3 Bucket - Audit log storage
   # ===========================================================================
 
   # ---------------------------------------------------------------------------
-  # 审计日志 S3 Bucket
+  # Audit log S3 Bucket
   # ---------------------------------------------------------------------------
   AuditLogBucket:
     Type: AWS::S3::Bucket
-    DeletionPolicy: Retain  # 删除 Stack 时保留日志（重要！）
+    DeletionPolicy: Retain  # Keep logs when Stack is deleted (important!)
     UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub '${AWS::StackName}-audit-logs-${AWS::AccountId}'
-      # 版本控制（防止误删）
+      # Version control (prevent accidental deletion)
       VersioningConfiguration:
         Status: Enabled
-      # 加密配置（监査要件：必須）
+      # Encryption configuration (audit requirement: mandatory)
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
-      # 公开访问阻止（セキュリティ要件）
+      # Public access block (security requirement)
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
-      # 生命周期规则（成本管理）
+      # Lifecycle rules (cost management)
       LifecycleConfiguration:
         Rules:
           - Id: ExpireOldLogs
@@ -175,13 +175,13 @@ Resources:
             ExpirationInDays: !Ref RetentionDays
             NoncurrentVersionExpiration:
               NoncurrentDays: 30
-          # 转移到 Glacier（长期保存时降低成本）
+          # Transition to Glacier (reduce cost for long-term storage)
           - Id: TransitionToGlacier
             Status: Enabled
             Transitions:
               - StorageClass: GLACIER
                 TransitionInDays: 90
-      # 标签
+      # Tags
       Tags:
         - Key: Name
           Value: !Sub '${AWS::StackName}-audit-logs'
@@ -190,10 +190,10 @@ Resources:
         - Key: ManagedBy
           Value: CloudFormation
         - Key: Purpose
-          Value: "監査ログ保存 (Audit Log Storage)"
+          Value: "Audit Log Storage"
 
   # ---------------------------------------------------------------------------
-  # S3 Bucket Policy - CloudTrail 写入权限
+  # S3 Bucket Policy - CloudTrail write permissions
   # ---------------------------------------------------------------------------
   AuditLogBucketPolicy:
     Type: AWS::S3::BucketPolicy
@@ -203,7 +203,7 @@ Resources:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-          # CloudTrail ACL 检查
+          # CloudTrail ACL check
           - Sid: AWSCloudTrailAclCheck
             Effect: Allow
             Principal:
@@ -213,7 +213,7 @@ Resources:
             Condition:
               StringEquals:
                 aws:SourceArn: !Sub 'arn:aws:cloudtrail:${AWS::Region}:${AWS::AccountId}:trail/${AWS::StackName}-trail'
-          # CloudTrail 日志写入
+          # CloudTrail log write
           - Sid: AWSCloudTrailWrite
             Effect: Allow
             Principal:
@@ -224,7 +224,7 @@ Resources:
               StringEquals:
                 s3:x-amz-acl: bucket-owner-full-control
                 aws:SourceArn: !Sub 'arn:aws:cloudtrail:${AWS::Region}:${AWS::AccountId}:trail/${AWS::StackName}-trail'
-          # Config 日志写入
+          # Config log write
           - Sid: AWSConfigWrite
             Effect: Allow
             Principal:
@@ -242,7 +242,7 @@ Resources:
             Resource: !GetAtt AuditLogBucket.Arn
 
   # ===========================================================================
-  # CloudTrail - API 审计日志
+  # CloudTrail - API audit logs
   # ===========================================================================
 
   # ---------------------------------------------------------------------------
@@ -254,20 +254,20 @@ Resources:
     DependsOn: AuditLogBucketPolicy
     Properties:
       TrailName: !Sub '${AWS::StackName}-trail'
-      # 目标 S3 Bucket
+      # Target S3 Bucket
       S3BucketName: !Ref AuditLogBucket
-      # 包含全局服务事件（IAM 等）
+      # Include global service events (IAM etc.)
       IncludeGlobalServiceEvents: true
-      # 多区域 Trail
+      # Multi-region Trail
       IsMultiRegionTrail: true
-      # 启用日志
+      # Enable logging
       IsLogging: true
-      # 日志文件验证（防篡改）
+      # Log file validation (anti-tampering)
       EnableLogFileValidation: !If
         - EnableValidation
         - true
         - false
-      # 标签
+      # Tags
       Tags:
         - Key: Name
           Value: !Sub '${AWS::StackName}-trail'
@@ -276,10 +276,10 @@ Resources:
         - Key: ManagedBy
           Value: CloudFormation
         - Key: Purpose
-          Value: "API 操作記録 (API Audit Trail)"
+          Value: "API Operation Recording (API Audit Trail)"
 
   # ===========================================================================
-  # AWS Config - 合规性检查
+  # AWS Config - Compliance checking
   # ===========================================================================
 
   # ---------------------------------------------------------------------------
@@ -299,7 +299,7 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWS_ConfigRole
-      # S3 写入权限
+      # S3 write permissions
       Policies:
         - PolicyName: ConfigS3Access
           PolicyDocument:
@@ -346,11 +346,11 @@ Resources:
         DeliveryFrequency: TwentyFour_Hours
 
   # ===========================================================================
-  # Config Rules - 合规规则
+  # Config Rules - Compliance rules
   # ===========================================================================
 
   # ---------------------------------------------------------------------------
-  # Rule 1: S3 加密检查
+  # Rule 1: S3 encryption check
   # ---------------------------------------------------------------------------
   S3EncryptionRule:
     Type: AWS::Config::ConfigRule
@@ -359,18 +359,17 @@ Resources:
     Properties:
       ConfigRuleName: s3-bucket-server-side-encryption-enabled
       Description: |
-        S3 バケットのサーバー側暗号化が有効かチェック
-        (S3 Bucket 服务端加密检查)
+        Check if S3 Bucket server-side encryption is enabled
       Source:
         Owner: AWS
         SourceIdentifier: S3_BUCKET_SERVER_SIDE_ENCRYPTION_ENABLED
-      # 检查范围：S3 Bucket
+      # Check scope: S3 Bucket
       Scope:
         ComplianceResourceTypes:
           - AWS::S3::Bucket
 
   # ---------------------------------------------------------------------------
-  # Rule 2: EC2 SSM 管理检查
+  # Rule 2: EC2 SSM management check
   # ---------------------------------------------------------------------------
   EC2ManagedBySSMRule:
     Type: AWS::Config::ConfigRule
@@ -379,8 +378,7 @@ Resources:
     Properties:
       ConfigRuleName: ec2-instance-managed-by-systems-manager
       Description: |
-        EC2 インスタンスが Systems Manager で管理されているかチェック
-        (EC2 是否由 SSM 管理)
+        Check if EC2 instances are managed by Systems Manager
       Source:
         Owner: AWS
         SourceIdentifier: EC2_INSTANCE_MANAGED_BY_SSM
@@ -389,7 +387,7 @@ Resources:
           - AWS::EC2::Instance
 
   # ---------------------------------------------------------------------------
-  # Rule 3: CloudTrail 有効化检查
+  # Rule 3: CloudTrail enabled check
   # ---------------------------------------------------------------------------
   CloudTrailEnabledRule:
     Type: AWS::Config::ConfigRule
@@ -398,15 +396,14 @@ Resources:
     Properties:
       ConfigRuleName: cloudtrail-enabled
       Description: |
-        CloudTrail が有効化されているかチェック
-        (CloudTrail 是否启用)
+        Check if CloudTrail is enabled
       Source:
         Owner: AWS
         SourceIdentifier: CLOUD_TRAIL_ENABLED
       MaximumExecutionFrequency: TwentyFour_Hours
 
   # ---------------------------------------------------------------------------
-  # Rule 4: Root ユーザー MFA 检查
+  # Rule 4: Root user MFA check
   # ---------------------------------------------------------------------------
   RootMFARule:
     Type: AWS::Config::ConfigRule
@@ -415,15 +412,14 @@ Resources:
     Properties:
       ConfigRuleName: root-account-mfa-enabled
       Description: |
-        Root アカウントの MFA が有効かチェック
-        (Root 账户 MFA 检查 - 重要！)
+        Check if Root account MFA is enabled (important!)
       Source:
         Owner: AWS
         SourceIdentifier: ROOT_ACCOUNT_MFA_ENABLED
       MaximumExecutionFrequency: TwentyFour_Hours
 
   # ---------------------------------------------------------------------------
-  # Rule 5: EBS 暗号化检查
+  # Rule 5: EBS encryption check
   # ---------------------------------------------------------------------------
   EBSEncryptionRule:
     Type: AWS::Config::ConfigRule
@@ -432,26 +428,25 @@ Resources:
     Properties:
       ConfigRuleName: ec2-ebs-encryption-by-default
       Description: |
-        EBS デフォルト暗号化が有効かチェック
-        (EBS 默认加密检查)
+        Check if EBS default encryption is enabled
       Source:
         Owner: AWS
         SourceIdentifier: EC2_EBS_ENCRYPTION_BY_DEFAULT
       MaximumExecutionFrequency: TwentyFour_Hours
 
 # -----------------------------------------------------------------------------
-# Outputs - 输出值
+# Outputs - Output values
 # -----------------------------------------------------------------------------
 Outputs:
 
   AuditLogBucketName:
-    Description: "审计日志 S3 Bucket 名称 (監査ログバケット名)"
+    Description: "Audit log S3 Bucket name"
     Value: !Ref AuditLogBucket
     Export:
       Name: !Sub '${AWS::StackName}-audit-bucket'
 
   AuditLogBucketArn:
-    Description: "审计日志 S3 Bucket ARN"
+    Description: "Audit log S3 Bucket ARN"
     Value: !GetAtt AuditLogBucket.Arn
 
   CloudTrailArn:
@@ -461,34 +456,34 @@ Outputs:
 
   ConfigRecorderName:
     Condition: CreateConfig
-    Description: "Config Recorder 名称"
+    Description: "Config Recorder name"
     Value: !Ref ConfigRecorder
 
   AuditDashboardURL:
-    Description: "CloudTrail Console URL (快速访问)"
+    Description: "CloudTrail Console URL (quick access)"
     Value: !Sub 'https://${AWS::Region}.console.aws.amazon.com/cloudtrail/home?region=${AWS::Region}#/trails'
 
   ConfigDashboardURL:
     Condition: CreateConfig
-    Description: "Config Console URL (快速访问)"
+    Description: "Config Console URL (quick access)"
     Value: !Sub 'https://${AWS::Region}.console.aws.amazon.com/config/home?region=${AWS::Region}#/rules'
 
 # =============================================================================
-# 日本 IT 场景说明
+# Japan IT Scenario Notes
 # =============================================================================
 #
-# 監査対応（かんさたいおう）:
-#   - 本模板满足日本企业常见的监査要件
-#   - CloudTrail: 全 API 操作の証跡
-#   - Config: 継続的コンプライアンスチェック
+# Audit Response (kansa taiou):
+#   - This template meets common audit requirements for Japanese enterprises
+#   - CloudTrail: Full API operation audit trail
+#   - Config: Continuous compliance checking
 #
-# 証跡保持期間の目安:
-#   - 一般企業: 90 日
-#   - 金融業界: 7 年（規制要件）
-#   - 政府機関: 5-10 年
+# Retention period guidelines:
+#   - General enterprises: 90 days
+#   - Financial industry: 7 years (regulatory requirements)
+#   - Government agencies: 5-10 years
 #
-# コスト管理:
-#   - Glacier 移行で長期保存コストを削減
-#   - 不要なデータイベント記録を無効化
+# Cost management:
+#   - Glacier transition reduces long-term storage costs
+#   - Disable unnecessary data event recording
 #
 # =============================================================================
